--- a/src/haf/system/static/system/partials/users.html
+++ b/src/haf/system/static/system/partials/users.html
@@ -3,7 +3,7 @@
         <h2>User Management</h2>
     </div><!-- /.span8 -->
     <div class="span3">
-        <button class="btn btn-primary" type="button" ng-click="goNewUser()">New User</button>
+        <a class="btn btn-primary" href="#/system/users/new">New User</a>
     </div><!-- /.span3 -->
   </div><!-- /.row-fluid -->
   <div class="row-fluid">
@@ -14,16 +14,16 @@
   <div class="row-fluid" style="margin-top: 20px;">
     <table class="table table-striped table-bordered">
       <tr>
-          <th>Username</th>
-          <th>First Name</th>
-          <th>Last Name</th>
+          <th ng-click="changeSorting('username')">Username</th>
+          <th ng-click="changeSorting('first_name')">First Name</th>
+          <th ng-click="changeSorting('last_name')">Last Name</th>
       </tr>
-      <tr ng-repeat="object in objects | filter:filter" ng-model="object">
+      <tr ng-repeat="object in objects | orderBy:sort.column:sort.descending | filter:filter" ng-model="object">
           <td><a href="#/system/users/{{ object.id }}">{{ object.username }}</a></td>
           <td>{{ object.first_name }}</td>
           <td>{{ object.last_name }}</td>
           <td style="width: 10%">
-              <button class="btn btn-danger" ng-click="object.$delete({id: object.id})">Delete</button>
+              <button class="btn btn-danger" ng-click="delete()">Delete</button>
           </td>
       </tr>
     </table><!-- /.table.table-striped.table-bordered -->
