Started making some small changes...
git-svn-id: svn://dunari.cis.vtc.edu/POWER@495 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/static/powr/partials/devices/detail.html
+++ b/src/haf/powr/static/powr/partials/devices/detail.html
@@ -38,3 +38,4 @@
             </td>
         </tr>
     </table>
+    <button type="button" value="Back" onclick="history.go(-1)" class="btn">Back</button>
