--- a/src/haf/system/static/system/partials/users/detail.html
+++ b/src/haf/system/static/system/partials/users/detail.html
@@ -68,3 +68,4 @@
             <button class="btn btn-primary" ng-click="savePassword()">Save changes</button>
         </div>
     </div><!-- /.modal.hide.fade -->
+    <button type="button" value="Back" onclick="history.go(-1)" class="btn">Back</button>
