--- a/src/haf/powr/static/powr/partials/graphs/new.html
+++ b/src/haf/powr/static/powr/partials/graphs/new.html
@@ -6,40 +6,41 @@
           <legend><strong>Step 1: </strong>Select the Devices to Graph</legend>
           <div class="row">
             <div class="span4 offset1">
-              <h5>Available Devices</h5>
-            </div>
+                <div class="row">
+                  <h5>Available Devices</h5>
+                </div><!-- /.row -->
+                <div class="row">
+                  <select multiple="multiple" name="devices_available" id="devices_available">
+                      <option value="Device A">Device A</option>
+                      <option value="Device B">Device B</option>
+                      <option value="Device C">Device C</option>
+                      <option value="Device D">Device D</option>
+                      <option value="Device E">Device E</option>
+                  </select>
+                </div><!-- /.row -->
+                <div class="row">
+                  <button type="button" class="btn btn btn-success" name="devices_add_selected" id="devices_add_selected">Add Selected</button>
+                </div><!-- /.row -->
+            </div><!-- /.span4.offset1 -->
+            
             <div class="span4 offset1">
-              <h5>Selected Devices</h5>
-            </div>
-          </div> <!-- /.row -->
-          <div class="row">
-            <div class="span4 offset1">
-              <select multiple="multiple" name="devices_available" id="devices_available">
-                <option value="Device A">Device A</option>
-                <option value="Device B">Device B</option>
-                <option value="Device C">Device C</option>
-                <option value="Device D">Device D</option>
-                <option value="Device E">Device E</option>
-              </select>
-            </div>
-            <div class="span4 offset1">
-              <select multiple="multiple" name="devices_selected" id="devices_selected">
-                <option value="Device A">Device A</option>
-                <option value="Device B">Device B</option>
-                <option value="Device C">Device C</option>
-                <option value="Device D">Device D</option>
-                <option value="Device E">Device E</option>
-              </select>
-            </div>
-          </div> <!-- /.row -->
-          <div class="row">
-            <div class="span4 offset1">
-              <button type="button" class="btn btn btn-success" name="devices_add_selected" id="devices_add_selected">Add Selected</button>
-            </div>
-            <div class="span4 offset1">
-              <button type="button" class="btn btn btn-danger" name="devices_remove_selected" id="devices_remove_selected">Remove Selected</button>
-            </div>
-          </div>
+                <div class="row">
+                  <h5>Selected Devices</h5>
+                </div><!-- /.row -->
+                <div class="row">
+                  <select multiple="multiple" name="devices_selected" id="devices_selected">
+                    <option value="Device A">Device A</option>
+                    <option value="Device B">Device B</option>
+                    <option value="Device C">Device C</option>
+                    <option value="Device D">Device D</option>
+                    <option value="Device E">Device E</option>
+                  </select>
+                </div><!-- /.row -->
+                <div class="row">
+                  <button type="button" class="btn btn btn-danger" name="devices_remove_selected" id="devices_remove_selected">Remove Selected</button>
+                </div><!-- /.row -->
+            </div><!-- /.span4.offset1 -->
+          </div><!-- /.row -->
         </fieldset>
       </div> <!-- /.step /#devices -->
       <div class="step" id="type">
@@ -85,78 +86,82 @@
       <div class="step" id="timespan">
         <fieldset>
           <legend><strong>Step 3: </strong>Choose the timeframe</legend>
+          
           <div class="row">
             <div class="span4 offset1">
-              <h5>Absolute Dates</h5>
-            </div>
+              <div class="row">
+                <h5>Absolute Dates</h5>
+              </div><!-- /.row -->
+              <div class="row">
+                <div class="input-prepend">
+                  <span class="add-on" style="width:70px;">Start Time</span>
+                  <input class="span3" id="startabsolutetime" type="text" placeholder="Click to select" name="timespan_absolute_start" id="timespan_absolute_start">
+                </div>
+              </div><!-- /.row -->
+              <div class="row">
+                <div class="input-prepend">
+                  <span class="add-on" style="width:70px;">End Time</span>
+                  <input class="span3" id="endabsolutetime" type="text" placeholder="Click to select" name="timespan_absolute_end" id="timespan_absolute_end">
+                </div>
+              </div><!-- /.row -->
+              <div class="row">
+                <label>
+                  <center>
+                    <input type="radio" name="timespan_type" value="absolute">
+                    Use selected absolute dates 
+                  </center>
+                </label>
+              </div><!-- /.row -->
+            </div><!-- /.span4.offset1 -->
+            
             <div class="span1">
               <center>
                 <h4>Or</h4>
               </center>
             </div>
-            <div class="span3">
+            
+            <div class="span4">
+              <div class="row">
               <h5>Realative Dates</h5>
-            </div>
-          </div> <!-- /.row -->
-          <div class="row">
-            <div class="span3 offset1">
-              <div class="input-prepend">
-                <span class="add-on" style="width:70px;">Start Time</span>
-                <input class="span3" id="startabsolutetime" type="text" placeholder="Click to select" name="timespan_absolute_start" id="timespan_absolute_start">
-              </div>
-            </div>
-            <div class="span4 offset2">
-              <div class="input-prepend input-append">
-                <span class="add-on" style="width:90px;">Timespan of</span>
-                <input class="span2" id="realativetimespan" type="text" placeholder="" name="timespan_realative_span_val" id="timespan_realative_span_val">
-                <select class="add-on timespan" style="height:30px;" name="timespan_realative_span_unit" id="timespan_realative_span_unit">
-                  <option value="year">Year(s)</option>
-                  <option value="month">Month(s)</option>
-                  <option value="week">Week(s)</option>
-                  <option value="day">Days(s)</option>
-                </select>
-              </div>
-            </div>
-          </div> <!-- /.row -->
-          <div class="row">
-            <div class="span3 offset1">
-              <div class="input-prepend">
-                <span class="add-on" style="width:70px;">End Time</span>
-                <input class="span3" id="endabsolutetime" type="text" placeholder="Click to select" name="timespan_absolute_end" id="timespan_absolute_end">
-              </div>
-            </div>
-            <div class="span4 offset2">
-              <div class="input-prepend input-append">
-                <span class="add-on" style="width:90px;">Starting</span>
-                <input class="span1"  style="width:86px;" id="realativestarting" type="text" placeholder="">
-                <select class="add-on timespan" style="height:30px;" name="timespan_realative_start_unit" id="timespan_realative_start_unit">
-                  <option value="year">Year(s)</option>
-                  <option value="month">Month(s)</option>
-                  <option value="week">Week(s)</option>
-                  <option value="day">Days(s)</option>
-                </select>
-                <span class="add-on" style="width:30px;">Ago</span> 
-              </div>
-            </div>
-          </div> <!-- /.row -->
-          <div class="row">
-            <div class="span4 offset1">
-              <label>
-                <center>
-                  <input type="radio" name="timespan_type" value="absolute">
-                  Use selected absolute dates 
-                </center>
-              </label>
-            </div>
-            <div class="span4 offset1">
-              <label>
-                <center>
-                  <input type="radio" name="timespan_type" value="realative">
-                  Use relative dates 
-                </center>
-              </label>
-            </div>
-          </div> <!-- /.row -->
+              </div><!-- /.row -->
+              <div class="row">
+                <div class="input-prepend input-append">
+                  <span class="add-on" style="width:90px;">Timespan of</span>
+                  <input class="span2" id="realativetimespan" type="text" placeholder="" name="timespan_realative_span_val" id="timespan_realative_span_val">
+                  <select class="add-on timespan" style="height:30px;" name="timespan_realative_span_unit" id="timespan_realative_span_unit">
+                    <option value="year">Year(s)</option>
+                    <option value="month">Month(s)</option>
+                    <option value="week">Week(s)</option>
+                    <option value="day">Days(s)</option>
+                  </select>
+                </div>
+              </div><!-- /.row -->
+              <div class="row">
+                <div class="input-prepend input-append">
+                  <span class="add-on" style="width:90px;">Starting</span>
+                  <input class="span1"  style="width:86px;" id="realativestarting" type="text" placeholder="">
+                  <select class="add-on timespan" style="height:30px;" name="timespan_realative_start_unit" id="timespan_realative_start_unit">
+                    <option value="year">Year(s)</option>
+                    <option value="month">Month(s)</option>
+                    <option value="week">Week(s)</option>
+                    <option value="day">Days(s)</option>
+                  </select>
+                  <span class="add-on" style="width:30px;">Ago</span> 
+                </div>
+              </div><!-- /.row -->
+              <div class="row">
+                <label>
+                  <center>
+                    <input type="radio" name="timespan_type" value="realative">
+                    Use relative dates 
+                  </center>
+                </label>
+              </div><!-- /.row -->
+            </div><!-- /.span4.offset2 -->
+          </div><!-- /.row -->
+          
+          
+          
         </fieldset>
       </div> <!-- /.step /#timespan -->
       <div id="button_bar" align="center">
