--- a/src/haf/static/css/powr.css
+++ b/src/haf/static/css/powr.css
@@ -43,25 +43,25 @@ body {
 	display: table;
 	width: 100%;
 }
-.navbar .nav li {
-	display: table-cell;
-	width: 1%;
-	float: none;
+.navbar .nav li.nav-item {
+	/*display: table-cell;*/
+	/*width: 1%;
+	/*float: none;*/
 }
-.navbar .nav li a {
+.navbar .nav li.nav-item a {
 	font-weight: bold;
 	text-align: center;
 	border-left: 1px solid rgba(255,255,255,.75);
 	border-right: 1px solid rgba(0,0,0,.1);
 }
-.navbar .nav li:first-child a {
+/*.navbar .nav li:first-child a {
 	border-left: 0;
 	border-radius: 3px 0 0 3px;
 }
 .navbar .nav li:last-child a {
 	border-right: 0;
 	border-radius: 0 3px 3px 0;
-}
+}*/
 .navbar .navbar-under {
 	padding: 5px;
 	;
@@ -113,7 +113,7 @@ body {
 .add-on .timespan option {
 	height: 30px;
 }
-.navbar .nav>li>.dropdown-menu:before {
+/*.navbar .nav>li>.dropdown-menu:before {
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -123,4 +123,4 @@ body {
 	border-left: 0px solid transparent;
 	border-bottom-color: rgba(0,0,0,0);
 	content: '';
-}
+}*/
