--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -12,6 +12,7 @@
   <link href="{{ STATIC_URL }}css/powr.css" rel="stylesheet" type="text/css">
   <link href="{{ STATIC_URL }}components/jquery-ui/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link href="{{ STATIC_URL }}components/jqplot/jquery.jqplot.css" rel="stylesheet" type="text/css">
+  <link href="{{ STATIC_URL }}components/intro.js/introjs.css" rel="stylesheet">
   {% endcompress %}
 
   <!-- This should not be compressed. Keep comments for prospective developers.... -->
@@ -32,12 +33,13 @@
 
   <!-- Include the AngularJS stuff right away, because it is needed for everything... -->
   {% compress js %}
-  <script src="{{ STATIC_URL }}components/jquery/jquery.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}components/bower-angular/angular.js"></script>
   <script src="{{ STATIC_URL }}components/bower-angular-resource/angular-resource.js"></script>
+  <script src="{{ STATIC_URL }}components/jquery/jquery.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/app.js"></script>
   <script src="{{ STATIC_URL }}js/controllers.js"></script>
   <script src="{{ STATIC_URL }}js/services.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/intro.js/intro.js"></script>
   {% endcompress %}
 
   <!-- For each app, include the bootstrap.js file -->
@@ -53,7 +55,7 @@
 <body>
   <div class="container">
 
-    <div class="masthead">
+    <!-- <div class="masthead"> -->
       <div class="row-fluid">
         <div class="span8">
             <h3>POW-R</h3>
@@ -66,30 +68,33 @@
       <div class="navbar" ng-app="navList">
         <div class="navbar-inner">
           <div class="container">
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-            </a>
+            </button>
             <div class="nav-collapse collapse">
               <ul class="nav" ng-controller="NavCtrl">
-                <li><a href="#">Help</a></li>
-                <li ng-class="navClass('dashboard')"><a href="#/dashboard">Dashboard</a></li>
-                <li ng-class="navClass('devices')"><a href="#/devices" class="dropdown-toggle" data-hover="dropdown">Devices <span class="caret"></span></a>
-                  <ul class="dropdown-menu" style=" margin-left:150px; margin-right:150px;">
+                <li class="nav-item"><a href="#">Help</a></li>
+                <li class="nav-item" ng-class="navClass('dashboard')"><a href="#/dashboard">Dashboard</a></li>
+                <li ng-class="navClass('devices')" class="dropdown nav-item">
+                  <a class="dropdown-toggle" data-toggle="dropdown">Devices <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
                     <li><a href="#/devices">View Current Devices</a></li>
                     <li><a href="#/devices/new">Add a New Device</a></li>
                   </ul>
                 </li>
-                <li ng-class="navClass('graphs')"><a href="#/graphs" class="dropdown-toggle" data-hover="dropdown">Graphs <span class="caret"></span></a>
-                  <ul class="dropdown-menu" style=" margin-left:150px; margin-right:150px;">
+                <li ng-class="navClass('graphs')" class="dropdown nav-item">
+                  <a class="dropdown-toggle" data-toggle="dropdown" >Graphs <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
                     <li><a href="#">Existing Graphs</a></li>
                     <li><a href="#/graphs/new">Make a New Graph</a></li>
                     <li><a href="#">Export Graphs</a></li>
                   </ul>
                 </li>
-                <li ng-class="navClass('system')"><a href="#/system" class="dropdown-toggle" data-hover="dropdown">System <span class="caret"></span></a>
-                  <ul class="dropdown-menu" style=" margin-left:150px; margin-right:150px;">
+                <li ng-class="navClass('system')" class="dropdown nav-item">
+                  <a class="dropdown-toggle" data-toggle="dropdown">System <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
                     <li><a href="#/system/users">Users</a></li>
                   </ul>
                 </li>
@@ -98,7 +103,7 @@
           </div> <!-- /.container --> 
         </div> <!-- /.navbar-inner --> 
       </div> <!-- /.navbar --> 
-    </div> <!-- /.masthead --> 
+    <!-- </div> <!-- /.masthead --> 
     
     <br />
     
@@ -141,7 +146,7 @@
   <!-- Bootstrap  -->
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}components/twitter-bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.js" type="text/javascript"></script>
+  <!-- <script src="{{ STATIC_URL }}components/twitter-bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.js" type="text/javascript"></script> -->
   <!-- JQPlot -->
   <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/jquery.jqplot.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.barRenderer.js"></script>
@@ -152,6 +157,9 @@
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.datepicker.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.slider.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-timepicker-addon/jquery-ui-timepicker-addon.js"></script>
+  <!-- Intro.js stuff 
+  <script type="text/javascript" src="{{ STATIC_URL }}components/intro.js/intro.js"></script>
+  -->
   {% endcompress %}
 
 </body>
