--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -87,7 +87,7 @@
                 <li ng-class="navClass('graphs')" class="dropdown nav-item">
                   <a class="dropdown-toggle" data-toggle="dropdown" >Graphs <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Existing Graphs</a></li>
+                    <li><a href="#">View Current Graphs</a></li>
                     <li><a href="#/graphs/new">Make a New Graph</a></li>
                     <li><a href="#">Export Graphs</a></li>
                   </ul>
@@ -95,7 +95,8 @@
                 <li ng-class="navClass('system')" class="dropdown nav-item">
                   <a class="dropdown-toggle" data-toggle="dropdown">System <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#/system/users">Users</a></li>
+                    <li><a href="#/system/users">View Current Users</a></li>
+                    <li><a href="#/system/users/new">Add a New User</a></li>
                   </ul>
                 </li>
               </ul> <!-- /.nav --> 
@@ -155,7 +156,7 @@
   <!-- JQuery UI and Date Picker -->
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.core.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.datepicker.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.slider.js"></script>
+  <!-- <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.slider.js"></script> -->
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-timepicker-addon/jquery-ui-timepicker-addon.js"></script>
   <!-- Intro.js stuff 
   <script type="text/javascript" src="{{ STATIC_URL }}components/intro.js/intro.js"></script>
