Added in a graph list and the ability edit existing graphs
git-svn-id: svn://dunari.cis.vtc.edu/POWER@500 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/static/powr/partials/graphs/detail.html
+++ b/src/haf/powr/static/powr/partials/graphs/detail.html
@@ -1,4 +1,4 @@
-<h1>Make a new Graph</h1>
+<h1>Modify an existing Graph</h1>
   <div id="graph_wizard">
     <form action="">
       <div class="step" id="devices">
