--- a/src/haf/powr/static/powr/partials/graphs.html
+++ b/src/haf/powr/static/powr/partials/graphs.html
@@ -1,1 +1,30 @@
-<p>This is the graphs page</p>
+  <div class="row-fluid">
+    <div class="span8">
+        <h2>Graph Management</h2>
+    </div><!-- /.span8 -->
+    <div class="span3">
+        <a class="btn btn-primary" href="#/powr/graphs/new">New Graph</a>
+    </div><!-- /.span3 -->
+  </div><!-- /.row-fluid -->
+  <div class="row-fluid">
+    <div class="span8">
+        <input ng-model="filter.name" class="input-medium search-query" placeholder="Filter..">
+    </div>
+  </div><!-- /.row-fluid -->
+  <div class="row-fluid" style="margin-top: 20px;">
+    <table class="table table-striped table-bordered">
+      <tr>
+          <th ng-click="changeSorting('name')">Name</th>
+          <th ng-click="changeSorting('graph_type')">Type</th>
+          <th ng-click="changeSorting('description')">Description</th>
+      </tr>
+      <tr ng-repeat="object in objects | orderBy:sort.column:sort.descending | filter:filter" ng-model="object">
+          <td><a href="#/graphs/{{ object.id }}">{{ object.name }}</a></td>
+          <td>{{ object.graph_type | graph_type }}</td>
+          <td>{{ object.description }}</td>
+          <td style="width: 10%">
+              <button class="btn btn-danger" ng-click="delete(object)">Delete</button>
+          </td>
+      </tr>
+    </table><!-- /.table.table-striped.table-bordered -->
+  </div>
