A few of the charts work now, but it is really ugly.
Maybe I should just restart the graphing library?

git-svn-id: svn://dunari.cis.vtc.edu/POWER@501 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/static/powr/partials/graphs/detail.html
+++ b/src/haf/powr/static/powr/partials/graphs/detail.html
@@ -180,11 +180,11 @@
         <fieldset>
           <legend></legend>
           <button type="reset" class="btn btn btn-danger" id="reset_button">Start Over</button>
-          <button type="button" class="btn btn btn-success" id="preview_button">Preview</button>
+          <button type="button" class="btn btn btn-success" ng-click="showGraph()">Preview</button>
           <button type="submit" class="btn btn-primary" id="save_button" ng-click="save()">Save Graph</button>
         </fieldset>
       </div> <!-- /#button_bar -->
-      <div id="preview" style="height:300px; width:500px; margin:auto;" align="center">
+      <div id="graph" style="height:300px; width:500px; margin:auto;" align="center">
       </div> <!-- /#preview -->
     </form>
   </div><!-- /#graph_wizard --> 
