--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -6,13 +6,15 @@
 <head>
   <title>POW-R :: New Graph</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   {% compress css %}
   <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet" media="screen" type="text/css">
   <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen" type="text/css">
   <link href="{{ STATIC_URL }}css/powr.css" rel="stylesheet" type="text/css">
   <link href="{{ STATIC_URL }}components/jquery-ui/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css">
-  <link href="{{ STATIC_URL }}components/jqplot/jquery.jqplot.css" rel="stylesheet" type="text/css">
+  <link href="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/jquery.jqplot.css" rel="stylesheet" type="text/css">
   <link href="{{ STATIC_URL }}components/intro.js/introjs.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.jqplot.min.css" />
   {% endcompress %}
 
   <!-- This should not be compressed. Keep comments for prospective developers.... -->
@@ -36,6 +38,32 @@
   <script src="{{ STATIC_URL }}components/bower-angular/angular.js"></script>
   <script src="{{ STATIC_URL }}components/bower-angular-resource/angular-resource.js"></script>
   <script src="{{ STATIC_URL }}components/jquery/jquery.js" type="text/javascript"></script>
+  
+  <!-- All this stuff is used to make the graphing API work... It's slightly problematic
+        and should be removed when there is time to replace it with something new -->
+  <script src="{{ STATIC_URL }}components/underscore/underscore.js"></script>
+  <script src="{{ STATIC_URL }}components/backbone/backbone.js"></script>
+  <script src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/jquery.jqplot.js"></script>
+  
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.dateAxisRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.canvasTextRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.canvasAxisTickRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.categoryAxisRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.barRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.pieRenderer.js"></script>
+  
+  <!--<script src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.canvasTextRenderer.js"></script>
+  <script src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.canvasAxisLabelRenderer.js"></script>
+  <script src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.categoryAxisRenderer.js"></script>
+  <script src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.dateAxisRenderer.js"></script>
+  <script src="{{ STATIC_URL }}components/jquery.jqplot.1.0.8r1250/plugins/jqplot.canvasAxisTickRenderer.js"></script> -->
+  
+  <script src="{{ STATIC_URL }}js/v/jqplot.js"></script>
+  <script src="{{ STATIC_URL }}js/v/jqplot.linechart.js"></script>
+  <script src="{{ STATIC_URL }}js/v/jqplot.piechart.js"></script>
+  <script src="{{ STATIC_URL }}js/v/jqplot.barchart.js"></script>
+  <script src="{{ STATIC_URL }}js/rest_charts.js"></script>
+  
   <script src="{{ STATIC_URL }}js/app.js"></script>
   <script src="{{ STATIC_URL }}js/controllers.js"></script>
   <script src="{{ STATIC_URL }}js/filters.js"></script>
@@ -149,11 +177,6 @@
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js" type="text/javascript"></script>
   <!-- <script src="{{ STATIC_URL }}components/twitter-bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.js" type="text/javascript"></script> -->
-  <!-- JQPlot -->
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/jquery.jqplot.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.barRenderer.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.categoryAxisRenderer.js"></script>
-  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.pointLabels.js"></script>
   <!-- JQuery UI and Date Picker -->
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.core.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.datepicker.js"></script>
@@ -162,6 +185,7 @@
   <!-- Intro.js stuff 
   <script type="text/javascript" src="{{ STATIC_URL }}components/intro.js/intro.js"></script>
   -->
+  <script type="text/javascript" src="{{ STATIC_URL }}components/datejs/build/date-en-US.js"></script>
   {% endcompress %}
 
 </body>
