--- a/src/haf/powr/static/powr/partials/graphs/new.html
+++ b/src/haf/powr/static/powr/partials/graphs/new.html
@@ -1,7 +1,8 @@
-<h1>Make a new Graph</h1>
+<h1 data-step="1" data-intro="From here you can create a new graph to view data about 1 or more
+Devices in a variety of formats and time periods.">Make a new Graph</h1>
   <div id="graph_wizard">
     <form action="">
-      <div class="step" id="devices">
+      <div class="step" id="devices" >
         <fieldset>
           <legend><strong>Step 0: </strong>Name your graph</legend>
           <div class="row">
@@ -22,7 +23,7 @@
           </div><!-- /.row -->
         </fieldset>
       </div> <!-- /.step /#devices -->
-      <div class="step" id="devices">
+      <div class="step" id="devices" data-step="2" data-intro="This step allows you to select which Device(s) to display on the graph.">
         <fieldset>
           <legend><strong>Step 1: </strong>Select the Devices to Graph</legend>
           <div class="row">
@@ -55,7 +56,7 @@
           </div><!-- /.row -->
         </fieldset>
       </div> <!-- /.step /#devices -->
-      <div class="step" id="type">
+      <div class="step" id="type" data-step="3" data-intro="This step allows you to select the type of graph to display the Device data on.">
         <fieldset>
           <legend><strong>Step 2: </strong>Select the Graph Type</legend>
           <div class="row">
@@ -95,7 +96,8 @@
           </div> <!-- /.row -->
         </fieldset>
       </div> <!-- /.step /#type -->
-      <div class="step" id="timespan">
+      <div class="step" id="timespan" data-step="4" data-intro="This step allows you to select the time frame for the graph. You can select either
+absolute or relative dates.">
         <fieldset>
           <legend><strong>Step 3: </strong>Choose the timeframe</legend>
           
