--- a/src/haf/static/partials/dashboard.html
+++ b/src/haf/static/partials/dashboard.html
@@ -1,7 +1,7 @@
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>Almost there!</h1>
-        <p class="lead">Welcome to POW-R, just a few more steps and you will be monitoring your power usage! First we need to add some Satellites so that we have some data.</p>
+        <p class="lead">Welcome to POW-R, just a few more steps and you will be monitoring your power usage! First we need to add some Devices so that we have some data.</p>
       </div>
 
       <hr>
@@ -9,18 +9,13 @@
       <!-- Example row of columns -->
       <div class="row-fluid">
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
+          <h2>Reducing your Power Consumption</h2>
+          <p>There are many easy, and somtimes creative, ways to reduce the amount of power used in your home. The POW-R system allows you to monitor the power consumption by each device, but there are other great things to try. Here are some examples...</p>
+		  <p><a class="btn" href="http://www.wikihow.com/Save-Energy-in-Your-Home">View details &raquo;</a></p>
+		</div>
         <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <h2>The Project</h2>
+          <p>The POW-R project aims to produce a low cost, low powered, device that will allow home owners to track their power consumption on a per-device basis. The hope is that by allowing home owners to see where all their energy is going, they can take steps to disable or replace the most inefficient offenders. Check out our project website by clicking "View details >>". </p>
+          <p><a class="btn" href="http://powr.logrit.com/">View details &raquo;</a></p>
         </div>
       </div>
