--- a/src/haf/system/static/system/partials/users.html
+++ b/src/haf/system/static/system/partials/users.html
@@ -2,16 +2,19 @@
     <div class="span8">
         <h2>User Management</h2>
     </div><!-- /.span8 -->
-    <div class="span3">
+    <div class="span3" data-step="2" data-intro="This button will take you to a wizard where you can add a User.">
         <a class="btn btn-primary" href="#/system/users/new">New User</a>
     </div><!-- /.span3 -->
   </div><!-- /.row-fluid -->
   <div class="row-fluid">
-    <div class="span8">
+    <div class="span8" data-step="4" data-intro="This allows you to search the list of displayed Users for a word, or specific set of
+characters.">
         <input ng-model="filter.name" class="input-medium search-query" placeholder="Filter..">
     </div>
   </div><!-- /.row-fluid -->
-  <div class="row-fluid" style="margin-top: 20px;">
+  <div class="row-fluid" style="margin-top: 20px;" data-step="1" data-intro="This is a comprehensive list of all Users. These fields can be sorted in ascending or
+descending order in each column. By clicking on the name of a User you can view the specific
+information pertaining to that User.">
     <table class="table table-striped table-bordered">
       <tr>
           <th ng-click="changeSorting('username')">Username</th>
@@ -23,7 +26,7 @@
           <td>{{ object.first_name }}</td>
           <td>{{ object.last_name }}</td>
           <td style="width: 10%">
-              <button class="btn btn-danger" ng-click="delete()">Delete</button>
+              <button class="btn btn-danger" ng-click="delete()" data-step="3" data-intro="This button allows you to delete an existing User.">Delete</button>
           </td>
       </tr>
     </table><!-- /.table.table-striped.table-bordered -->
