Added a second button to these pages
git-svn-id: svn://dunari.cis.vtc.edu/POWER@507 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/static/powr/partials/devices.html
+++ b/src/haf/powr/static/powr/partials/devices.html
@@ -32,4 +32,5 @@ will not record power data on that Device.">
           </td>
       </tr>
     </table><!-- /.table.table-striped.table-bordered -->
+    <button class="btn btn-primary" type="button" ng-click="goNewDevice()">New Device</button>
   </div>
