--- a/src/haf/system/static/system/partials/users.html
+++ b/src/haf/system/static/system/partials/users.html
@@ -30,4 +30,5 @@ information pertaining to that User.">
           </td>
       </tr>
     </table><!-- /.table.table-striped.table-bordered -->
+    <a class="btn btn-primary" href="#/system/users/new">New User</a>
   </div>
